--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,6 @@
   --card-foreground: #f5f6f8;
 }
 
-
 /* Container */
 .container {
   width: 100%;
@@ -89,14 +88,20 @@
 .text-input {
   color: var(--input);
 }
+.text-primary-foreground {
+  color: var(--primary-foreground);
+}
+.text-destructive-foreground {
+  color: var(--destructive-foreground);
+}
 .bg-primary {
   background-color: var(--primary);
 }
+.bg-destructive {
+  background-color: var(--destructive);
+}
 .bg-background {
   background-color: var(--background);
-}
-.text-primary-foreground {
-  color: var(--primary-foreground);
 }
 
 .bg-card {
@@ -125,7 +130,9 @@
     height: 0;
   }
   to {
-    height: var(--radix-accordion-content-height); /* You'll need to ensure this CSS variable is set by your JS for Radix components */
+    height: var(
+      --radix-accordion-content-height
+    ); /* You'll need to ensure this CSS variable is set by your JS for Radix components */
   }
 }
 
@@ -136,7 +143,9 @@
 /* Accordion Up */
 @keyframes accordion-up {
   from {
-    height: var(--radix-accordion-content-height); /* You'll need to ensure this CSS variable is set by your JS for Radix components */
+    height: var(
+      --radix-accordion-content-height
+    ); /* You'll need to ensure this CSS variable is set by your JS for Radix components */
   }
   to {
     height: 0;
